--- a/ubuntu/Containerfile
+++ b/ubuntu/Containerfile
@@ -1,9 +1,10 @@
 ARG ARG_DISTRO_VARIANT
 FROM ubuntu:${ARG_DISTRO_VARIANT}
 
-RUN apt-get update \
-	&& apt-get upgrade -y \
-	&& apt-get install -y
+RUN : \
+	&& DEBIAN_FRONTEND='noninteractive' apt-get update -y \
+	&& DEBIAN_FRONTEND='noninteractive' apt-get install -y --no-install-recommends 'apt-utils' 'apt-transport-https' \
+	&& DEBIAN_FRONTEND='noninteractive' apt-get upgrade -y
 
 RUN useradd \
 	--comment 'Fox' \
